--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -3,7 +3,7 @@
 
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
-        <TextView android:id="@+id/lblHeading" android:text="Household List" android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHeading" android:text="খানার তালিকা" android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
     </LinearLayout>
 
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
@@ -11,7 +11,7 @@
         <TextView
             android:layout_height="wrap_content" android:layout_width="100sp"
             android:gravity="left"
-            android:text=" Union"
+            android:text="ইউনিয়ন"
             android:textColor="#000000"
             android:textSize="18sp"/>
 
@@ -28,7 +28,7 @@
         <TextView
             android:layout_height="wrap_content" android:layout_width="100sp"
             android:gravity="left"
-            android:text=" Village"
+            android:text="গ্রাম"
             android:textColor="#000000"
             android:textSize="18sp"/>
 
@@ -42,14 +42,14 @@
         <Button android:id="@+id/cmdBari" android:background="@drawable/button_style"
             android:layout_width="85sp"  android:textSize="14sp"
             android:layout_height="40sp"
-            android:text="New Bari"/>
+            android:text="নতুন বাড়ি"/>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView
             android:layout_height="40sp" android:layout_width="100sp"
             android:gravity="left"
-            android:text=" Bari"
+            android:text="বাড়ি"
             android:textColor="#000000"
             android:textSize="18sp" />
 
@@ -63,14 +63,14 @@
         <Button android:id="@+id/cmdUpdateBari" android:background="@drawable/button_style"
             android:layout_width="85sp"  android:textSize="14sp"
             android:layout_height="40sp"
-            android:text="Update"/>
+            android:text="আপডেট"/>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <Button android:id="@+id/cmdHH" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="match_parent"  android:textSize="18sp" android:textColor="#ffffff"
             android:layout_height="40sp"
-            android:text="New HH Registration"/>
+            android:text="নতুন খানা রেজিস্ট্রেশান"/>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">
